--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
             <li>
                 <a href="index.html">Home</a>
             </li>
+            <li>
+                <a href="Fetch-API-And-JSON-Demo-Project/index.html">Fetch API and JSON Demo Project</a>
+            </li>
+            <li>
+                <a href="furniture-add-to-cart-vanilla-js/index.html">furniture-add-to-cart-vanilla-js</a>
+            </li>
+            <li>
+                <a href="meal-search-api-vanilla-js/index.html">meal-search-api-vanilla-js</a>
+            </li>
         </ul>
     </div>
     <div class="body-text">
