JSON Placeholder Project Added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <a href="Fetch-API-And-JSON-Demo-Project/index.html">Fetch API and JSON Demo Project</a>
             </li>
             <li>
+                <a href="JSON-Placeholder-API-Project/">JSON Placeholder API Project</a>
+            </li>
+            <li>
                 <a href="furniture-add-to-cart-vanilla-js/index.html">furniture-add-to-cart-vanilla-js</a>
             </li>
             <li>
