--- a/JSON-Placeholder-API-Project/users.html
+++ b/JSON-Placeholder-API-Project/users.html
@@ -43,6 +43,9 @@
                             <h4 class="my-0 fw-normal">Users</h4>
                         </div>
                         <div class="card-body">
+                            <h1 class="card-title pricing-card-title">Preview <small class="text-muted fw-light"> of Source Structure:</small></h1>
+                            <iframe src="https://jsonplaceholder.typicode.com/users" width="100%" frameborder="0"></iframe>
+                            <hr>
                             <h1 class="card-title pricing-card-title">Fetch <small class="text-muted fw-light">10 User's from:</small></h1>
                             <p>https://jsonplaceholder.typicode.com/users</p>
                             <ul class="list-unstyled mt-3 mb-4">
