--- a/JSON-Placeholder-API-Project/photos.html
+++ b/JSON-Placeholder-API-Project/photos.html
@@ -43,17 +43,22 @@
                             <h4 class="my-0 fw-normal">Photos</h4>
                         </div>
                         <div class="card-body">
+                            <h1 class="card-title pricing-card-title">Preview <small class="text-muted fw-light"> of Source Structure:</small></h1>
+                            <iframe src="https://jsonplaceholder.typicode.com/photos" width="100%" frameborder="0"></iframe>
+                            <hr>
                             <h1 class="card-title pricing-card-title">Fetch <small class="text-muted fw-light">5000 Photos from:</small></h1>
                             <p>https://jsonplaceholder.typicode.com/photos</p>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-                                    <strong>Warning!</strong> Loading 5000 Photos will take a few moments and also eat up your bandwidth!
+                                    <strong>Warning!</strong> Loading 5000 Photos will take a few moments and also eat up your bandwidth!<br><i>Not advisable for testing on a mobile device </i> <strong>testing will crash your mobile browser.</strong>
                                     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                                 </div>
                                 <li><button id="getPhotos" type="button" class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
                                 <li><button id="getAlbums" type="button" hidden class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
                                 <li><button id="getComments" type="button" hidden class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
                                 <li><button id="getPosts" type="button" hidden class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
+                                <li><button id="getUsers" type="button" hidden class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
+                                <li><button id="getTodos" type="button" hidden class="w-100 btn btn-lg btn-outline-primary">Fetch</button></li>
                             </ul>
                         </div>
                     </div>
