--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSON REST API Projects with AJAX | Michael O'Grady</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css" />
 </head>
 
 <body>
-    <input type="checkbox" name="" id="active">
+    <input type="checkbox" name="" id="active" />
     <label for="active" class="menu-btn"><i class="fas fa-bars"></i></label>
     <div class="wrapper">
         <ul class="menu">
@@ -20,40 +20,49 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="Fetch-API-And-JSON-Demo-Project/index.html">Fetch API and JSON Demo Project</a>
-            </li>
-            <li>
-                <a href="JSON-Placeholder-API-Project/">JSON Placeholder API Project</a>
-            </li>
-            <li>
-                <a href="furniture-add-to-cart-vanilla-js/index.html">furniture-add-to-cart-vanilla-js</a>
-            </li>
-            <li>
-                <a href="meal-search-api-vanilla-js/index.html">meal-search-api-vanilla-js</a>
-            </li>
-        </ul>
+                <a href="./Fetch-API-And-JSON-Demo-Project/index.html">Fetch API and JSON Demo Project</a
+          >
+        </li>
+        <li>
+          <a href="./JSON-Placeholder-API-Project/index.html"
+            >JSON Placeholder API Project</a
+          >
+        </li>
+      </ul>
     </div>
     <div class="body-text">
-        <div class="title">
-            <h1>JSON REST API Projects with AJAX</h1>
-            <hr>
-        </div>
-        <div class="sub-title">
-            <p><i>This series is a collection of projects built to practice fetching and posting data through JSON REST API and AJAX.</i></p>
-            <hr>
-            <p>HTML, CSS, JavaScript, jQuery with<i> JSON, REST API, AJAX.</i></p>
-        </div>
+      <div class="title">
+        <h1>JSON REST API Projects with AJAX</h1>
+        <hr />
+      </div>
+      <div class="sub-title">
+        <p>
+          <i
+            >This series is a collection of projects built to practice fetching
+            and posting data through JSON REST API and AJAX.</i
+          >
+        </p>
+        <hr />
+        <p>HTML, CSS, JavaScript, jQuery with<i> JSON, REST API, AJAX.</i></p>
+      </div>
     </div>
     <footer class="footer text-center">
-        <div class="container">
-
-            <div class="footer-bottom text-center py-5">
-                <!--/* This Project is free to download and to modify for yourself so long as you keep this footer attribution link. Thank you for your support. :) */-->
-                <small class="copyright"><i class="devicon-javascript-plain colored" hidden></i> API Projects  &copy; 2021 by <a class="theme-link" href="http://michaelogrady.net" target="_blank">Michael O'Grady</a></small>
-            </div>
+      <div class="container">
+        <div class="footer-bottom text-center py-5">
+          <!--/* This Project is free to download and to modify for yourself so long as you keep this footer attribution link. Thank you for your support. :) */-->
+          <small class="copyright"
+            ><i class="devicon-javascript-plain colored" hidden></i> API
+            Projects &copy; 2021 by
+            <a
+              class="theme-link"
+              href="http://michaelogrady.com"
+              target="_blank"
+              >Michael O'Grady</a
+            ></small
+          >
         </div>
-        <!--//container-->
+      </div>
+      <!--//container-->
     </footer>
-</body>
-
+  </body>
 </html>
