--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             >JSON Placeholder API Project</a
           >
         </li>
+        <li>
+          <a href="./InternetConnectionDetection/index.html"
+            >Internet Connection Detection</a
+          >
+        </li>
       </ul>
     </div>
     <div class="body-text">
